[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/ui/main_menu/equipment_setting/equipment_setting.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/main_menu/equipment_setting/left_options/left_options.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/main_menu/equipment_setting/icons/armor.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/main_menu/equipment_setting/icons/helm.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/main_menu/equipment_setting/icons/facewear.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/main_menu/equipment_setting/icons/p_weapon.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/main_menu/equipment_setting/icons/s_weapon.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/main_menu/equipment_setting/icons/special.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/main_menu/equipment_setting/right_options/right_options.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/ui/main_menu/equipment_setting/icons/support.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/main_menu/equipment_setting/icons/bag.png" type="Texture" id=12]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("right_set:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 475, 346 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("left_set:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 346 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("left_set:margin_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -192.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("left_set:margin_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -168.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("left_set:margin_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -67.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("left_set:margin_bottom")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 164.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("right_set:margin_left")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 104.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("right_set:margin_top")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -168.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("right_set:margin_right")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 229.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("right_set:margin_bottom")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 164.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("unit_info:margin_left")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 200.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("unit_info:margin_top")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -150.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("unit_info:margin_right")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 400.0 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("unit_info:margin_bottom")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -70.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "show"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("left_set:margin_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -192.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("left_set:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -168.0, -166.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("left_set:margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -67.0, 125.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("left_set:margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 164.0, 168.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("right_set:margin_left")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 104.0, -125.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("right_set:margin_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -168.0, -166.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("right_set:margin_right")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 229.0, 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("right_set:margin_bottom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 164.0, 166.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("unit_info:margin_left")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("unit_info:margin_top")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -209.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("unit_info:margin_right")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("unit_info:margin_bottom")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -129.0, 40.0 ]
}

[node name="equipment_setting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="left_set" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -168.0
margin_right = -67.0
margin_bottom = 164.0
rect_min_size = Vector2( 125, 0 )
mouse_filter = 2
alignment = 2

[node name="head_gear" parent="left_set" instance=ExtResource( 3 )]
icon = ExtResource( 5 )
title = "Head Gear"

[node name="face_wear" parent="left_set" instance=ExtResource( 3 )]
margin_top = 84.0
margin_bottom = 164.0
icon = ExtResource( 6 )
title = "Face Wear"

[node name="body_armor" parent="left_set" instance=ExtResource( 3 )]
margin_top = 168.0
margin_bottom = 248.0
icon = ExtResource( 4 )
title = "Body Armor"

[node name="backpack" parent="left_set" instance=ExtResource( 3 )]
margin_top = 252.0
margin_bottom = 332.0
icon = ExtResource( 12 )
title = "Backpack"

[node name="right_set" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 104.0
margin_top = -168.0
margin_right = 229.0
margin_bottom = 164.0
rect_min_size = Vector2( 125, 0 )
mouse_filter = 2
alignment = 2

[node name="primary" parent="right_set" instance=ExtResource( 10 )]
icon = ExtResource( 7 )
title = "Primary"

[node name="secondary" parent="right_set" instance=ExtResource( 10 )]
margin_top = 84.0
margin_bottom = 164.0
icon = ExtResource( 8 )
title = "Secondary"

[node name="special" parent="right_set" instance=ExtResource( 10 )]
margin_top = 168.0
margin_bottom = 248.0
icon = ExtResource( 9 )
title = "Special"

[node name="support" parent="right_set" instance=ExtResource( 10 )]
margin_top = 252.0
margin_bottom = 332.0
icon = ExtResource( 11 )
title = "Support"

[node name="unit_info" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 200.0
margin_top = -150.0
margin_right = 400.0
margin_bottom = -70.0
rect_min_size = Vector2( 200, 80 )
mouse_filter = 2
size_flags_horizontal = 4

[node name="ColorRect2" type="ColorRect" parent="unit_info"]
visible = false
margin_right = 800.0
margin_bottom = 80.0
color = Color( 0, 0, 0, 0.705882 )

[node name="player_name" type="Label" parent="unit_info"]
margin_top = 20.0
margin_right = 800.0
margin_bottom = 60.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 2 )
text = "..."
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/show = SubResource( 1 )

[connection signal="pressed" from="left_set/head_gear" to="." method="_on_head_gear_pressed"]
[connection signal="pressed" from="left_set/face_wear" to="." method="_on_face_wear_pressed"]
[connection signal="pressed" from="left_set/body_armor" to="." method="_on_body_armor_pressed"]
[connection signal="pressed" from="left_set/backpack" to="." method="_on_backpack_pressed"]
[connection signal="pressed" from="right_set/primary" to="." method="_on_primary_pressed"]
[connection signal="pressed" from="right_set/secondary" to="." method="_on_secondary_pressed"]
[connection signal="pressed" from="right_set/special" to="." method="_on_special_pressed"]
[connection signal="pressed" from="right_set/support" to="." method="_on_support_pressed"]
